Latest demo setup additions -- adding permissions, etc.